2022-12-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tests/fn-generate.perl, tests/fn-{utf8,euc,sjis}.txt,
	Makefile.in:
	Tests for file names with wide characters & {pdf,Xe,p,up}TeX.

2022-09-28  Karl Berry  <karl@freefriends.org>

	* tex.ch (halting_on_error_p): new variable, set when we start to
	halt_on_error, and exit immediately if seen again.
	* mf.ch: likewise.
	(The cause is that close_files_and_terminate tries to close out
	the dvi file nicely, which includes figuring out the
	magnification, so if the magnification is already set, there's a
	"recursive" error, which caused an infloop.)
	Report from Bachir Bendrissou, tlsecurity 28 Sep 2022 12:28:10.

2022-09-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* bibtex.ch:
	Check options before initialization of kpathsearch parameters.
	This change prevents unwanted looking for texmf.cnf.
	https://github.com/texjporg/tex-jp-build/issues/145
	* bibtex.test, tests/enc-u.aux, tests/enc-u{p,u}.bbl:
	Update tests for ((u)p)BibTeX.

2022-08-22 Luigi Scarso <luigi.scarso@gmail.com>

	* ac/web2c.ac: add potrace as dependency of mflua/mfluajit
	* Makefile.am: add @POTRACE_RULE@
	* configure.ac: add KPSE_POTRACE_FLAGS

2022-08-21  Andreas Scherer  <https://ascherer.github.io>

	* ctangleboot.cin,
	* help.h: New option '+u' for CTANGLE.

2022-08-06  Andreas Scherer  <https://ascherer.github.io>

	* weave.ch: Rewrite 'squash' to match description in section 148.

2022-07-16  Karl Berry  <karl@freefriends.org>

	* tex.ch (25.369, <Suppress expansion ...>): disallow
	\noexpand\endwrite, else we get a seg fault because of fetching
	mem[null]. Fix from drf.
	Original report: https://tex.stackexchange.com/questions/609423
	TeX bug entry: https://tug.org/texmfbug/newbug.html#B155endwrite

2022-06-12  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* texmfmp-help.h ((e)(u)pTeX), help.h ((u)pBibTeX):
	Support guessing input file encodings.
	https://github.com/texjporg/tex-jp-build/issues/142