@@ -621,8 +621,8 @@ fatal(_("! Cannot open output file "),tex_file_name);
 static boolean input_ln(
 FILE*fp)
 {
-register int c= EOF;
-register char*k;
+int c= EOF;
+char*k;
 if(feof(fp))return false;
 limit= k= buffer;
 while(k<=buffer_end&&(c= getc(fp))!=EOF&&c!='\n')
@@ -1412,7 +1412,7 @@ scan_args(void)
 {
 char*dot_pos;
 char*name_pos;
-register char*s;
+char*s;
 boolean found_web= false,found_change= false,found_out= false;
 
 
