@@ -157,8 +157,8 @@ support |feof|, |getc|, and |ungetc| you may have to change things here.
 static boolean input_ln( /* copies a line into |buffer| or returns |false| */
 FILE *fp) /* what file to read from */
 {
-  register int c=EOF; /* character read; initialized so some compilers won't complain */
-  register char *k; /* where next character goes */
+  int c=EOF; /* character read; initialized so some compilers won't complain */
+  char *k; /* where next character goes */
   if (feof(fp)) return false; /* we have hit end-of-file */
   limit = k = buffer; /* beginning of buffer */
   while (k<=buffer_end && (c=getc(fp)) != EOF && c!='\n')
@@ -1160,7 +1160,7 @@ scan_args(void)
 {
   char *dot_pos; /* position of |'.'| in the argument */
   char *name_pos; /* file name beginning, sans directory */
-  register char *s; /* register for scanning strings */
+  char *s; /* pointer for scanning strings */
   boolean found_web=false,found_change=false,found_out=false;
              /* have these names been seen? */
 
