@@ -1,3 +1,7 @@
+2023-01-08  Andreas Scherer  <https://ascherer.github.io>
+
+	* cwebboot.cin: C++ has removed 'register' storage class.
+
 2022-12-28  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* tests/fn-generate.perl, tests/fn-{utf8,euc,sjis}.txt,
